:green_heart: Update CI build and scaffold command.

--- a/.semver.yml
+++ b/.semver.yml
@@ -1,7 +1,7 @@
-# semantic-release setting (when using scaffold)
-branches: [ master, main]
+# Release Branches
+branches: [ master, main ]
 
-# Emoji semver classification
+# gitmoji semver settings (default is none)
 semver:
   major:
     - boom      # Introduce breaking changes.
