:boom: Update gitmoji version to 3.2.0(with semver). Remove default-template.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Generate semantic-release configs
         working-directory: ./gitmoji-semver
         run: |
-          make scaffold V=v3.0.0 F=../.semver.yml O=.. T=simple
+          make scaffold F=../.semver.yml O=..
       - name: Release
         working-directory: ./.release
         env:
